chore(statistic): default filter by current year, month
