# docs/swagger.yaml
@@ -472,6 +472,14 @@ paths:
         in: query
         name: is_expense
         type: boolean
+      - description: Date start
+        in: query
+        name: date_start
+        type: string
+      - description: Date end
+        in: query
+        name: date_end
+        type: string
       responses:
         "200":
           description: OK
